# sp2p

./: .gitignore  CMakeLists.txt  README.md
database/: db_init.sql
node_client/: CMakeLists.txt  sp2p.conf
node_client/src/: CMakeLists.txt  context.hpp  main.cpp
node_client/test/: CMakeLists.txt
proto_files/: sp2p_protocol.proto
sercli/: CMakeLists.txt
sercli/src/: CMakeLists.txt  client.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  credential_manager.hpp  data.cpp  data.hpp  encryption.cpp  encryption.hpp  globals.cpp  globals.hpp  handler.cpp  handler.hpp  logging.cpp  logging.hpp  main.cpp  manager.cpp  manager.hpp  message.hpp  message_factory.cpp  message_factory.hpp  myserver.hpp  network.cpp  network.hpp  network_description.cpp  network_description.hpp  node.cpp  node.hpp  node_description.cpp  node_description.hpp  nodeconnection.cpp  nodeconnection.hpp  nodemessage.cpp  nodemessage.hpp  parser.cpp  parser.hpp  parser_factory.cpp  parser_factory.hpp  (+11 more)
sercli/src/tests/: CMakeLists.txt  sercli_edu_tests.cpp  sercli_inittest.cpp
sercli/test/: CMakeLists.txt  edu_test.cpp  globals_test.cpp  handler_test.cpp  manager_test.cpp  network_test.cpp  node_connection_test.cpp  node_test.cpp  parser_test.cpp  serialization_test.cpp
sp2p/database/: db_init.sql
tracker/: CMakeLists.txt
tracker/qmake_project/: connection.cpp  connection.hpp  constants.h  logger.cpp  logger.hpp  logincontroler.cpp  logincontroler.hpp  main.cpp  protocolfactory.cpp  protocolfactory.hpp  request.cpp  request.hpp  requesthandler.cpp  requesthandler.hpp  requestparser.cpp  requestparser.hpp  response.cpp  response.hpp  server.cpp  server.hpp  server.prv  sessioncontroler.cpp  sessioncontroler.hpp  sp2psession.cpp  tracker  tracker.pro  types.hpp
tracker/qmake_project/db/: abstractdbconnector.h  dbconfig.h  dbresponse.h  psqlconnector.cpp  psqlconnector.h  utils.cpp  utils.h
tracker/qmake_project/proto/: nodemessagefactory.cpp  nodemessagefactory.h  sp2p_protocol.pb.cc
tracker/qmake_project/protocol_factory/: abstractlogincontroler.hpp  abstractprotocolfactory.hpp  abstractrequest.hpp  abstractrequesthandler.hpp  abstractrequestparser.hpp  abstractresponse.hpp  abstractsessioncontroler.hpp
tracker/qmake_project/utils/: invitation.cpp  invitation.hpp  network.cpp  network.hpp  proto_invitation.cpp  proto_invitation.hpp  proto_network.cpp  proto_network.hpp  proto_server.cpp  proto_server.hpp  proto_user.cpp  proto_user.hpp  server.cpp  server.hpp  user.cpp  user.hpp  util_functions.cpp  util_functions.h
tracker/src/: CMakeLists.txt  main.cpp
tracker/src/tests/: CMakeLists.txt  tracker_inittest.cpp
